[package]
name = "heap-slice"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/heap-slice"
documentation = "https://docs.rs/heap-slice"
description = "Basically `Box<[T]>` but smaller stack size"

[dependencies]
sptr = { version = "0.3.2", default-features = false }
